Trying to get a localstorage version working.

--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,9 @@
     <script src="assets/js/collections/papers.js"></script>
     <script src="assets/js/views/paper-view.js"></script>
     <script src="assets/js/views/app-view.js"></script>
+    <script src="assets/js/views/app-view.js"></script>
+    <script type="text/javascript" src="node_modules/backbone/backbone.js"></script>
+    <script type="text/javascript" src="node_modules/backbone.localstorage/backbone.localStorage.js"></script>
 
   </body>
   <script>
