--- a/app/index.html
+++ b/app/index.html
@@ -68,8 +68,8 @@
     require('./assets/js/notifications.js');
 
     // Backbone
-    require('backbone');
-    require('backbone.localStorage');
+    //require('backbone');
+    //require('backbone.localStorage');
 
 
   </script>
