--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,9 @@
     //require('backbone');
     //require('backbone.localStorage');
 
+    // Underscore
+    //require('underscore');
+
 
   </script>
   <script src="./assets/js/models/paper.js"></script>
