--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="assets/css/app.css">
+    <title>Paper-Notes</title>
+    <link rel="stylesheet" href="./assets/css/app.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap-theme.css">
 
     <!-- http://electron.atom.io/docs/faq/ -->
     <!--
@@ -17,24 +19,55 @@
 
   </head>
   <body>
+    <div class="container theme-showcase" role="main">
+      <!-- Main jumbotron for a primary marketing message or call to action -->
+      <div class="jumbotron">
+        <h1>Paper. Notes.</h1>
+        <p>Read and make notes with ease.</p>
+      </div>
 
       <section id="paperapp">
-  			<header id="header">
-  				<h1>papers</h1>
-  				<input id="new-paper" placeholder="Paper Title" autofocus>
-  			</header>
-  			<section id="main">
-  				<ul id="paper-list"></ul>
+
+        <div class="form-group" id="files">
+          <button id="clear" class="btn btn-primary">Clear</button>
+          <button id="open" class="btn btn-primary">Open</button>
+          <button id="save" class="btn btn-primary">Save</button>
+        </div>
+
+        <div class="page-header">
+				  <h1>Add New Paper</h1>
+        </div>
+
+        <div class="form-group">
+          <label for="new-paper">Paper Title</label>
+				  <input id="new-paper" class="form-control" placeholder="Paper Title" autofocus>
+        </div>
+
+        <section id="main">
+          <div class="page-header">
+            <h1>Papers</h1>
+          </div>
+  				<div id="paper-list"></div>
   			</section>
-  			<footer id="footer"></footer>
+        
   		</section>
 
+
       <script type="text/template" id="item-template">
-  			<div class="view">
-  				<label><%- title %></label>
-  				<button class="destroy">X</button>
-  			</div>
-  			<input class="edit" value="<%- title %>">
+        <div class="row">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title"><%- title %></h3>
+            </div>
+            <div class="panel-body">
+              <div class="form-group">
+                <input class="edit form-control" value="<%- title %>">
+              </div>
+              <p>Further information. Editing toggle.</p>
+              <button class="destroy btn btn-danger btn-sm">Delete</button>
+            </div>
+          </div>
+        </div>
   		</script>
 
       <p>
@@ -46,7 +79,7 @@
         </small>
       </p>
 
-
+    </div>
   </body>
 
   <!-- http://stackoverflow.com/a/37480521/209647 -->
@@ -55,7 +88,7 @@
 
   <!-- normal script imports etc  -->
   <script>
-    window.$ = require('jquery');
+    window.$ = window.jQuery = require('jquery');
   </script>
 
   <!-- Insert this line after script imports -->
@@ -64,6 +97,7 @@
 
   <script>
     // You can also require other files to run in this process
+    require('bootstrap');
     require('./assets/js/ex-links.js');
     require('./assets/js/notifications.js');
 
