Expanding the data models.

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
           </div>
   				<div id="paper-list"></div>
   			</section>
-        
+
   		</section>
 
 
@@ -110,7 +110,11 @@
 
 
   </script>
+  <script src="./assets/js/models/note.js"></script>
+  <script src="./assets/js/models/annotation.js"></script>
   <script src="./assets/js/models/paper.js"></script>
+  <script src="./assets/js/collections/notes.js"></script>
+  <script src="./assets/js/collections/annotations.js"></script>
   <script src="./assets/js/collections/papers.js"></script>
   <script src="./assets/js/views/paper-view.js"></script>
   <script src="./assets/js/views/app-view.js"></script>
