--- a/app/index.html
+++ b/app/index.html
@@ -20,55 +20,53 @@
   </head>
   <body>
     <div class="container theme-showcase" role="main">
+
+      <!-- Navbar -->
+      <nav class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Project name</a>
+          </div>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#/papers">Papers</a></li>
+              <li><a href="#/papers/1">Paper 1</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li class="dropdown-header">Nav header</li>
+                  <li><a href="#">Separated link</a></li>
+                  <li><a href="#">One more separated link</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </nav>
+
+
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>Paper. Notes.</h1>
         <p>Read and make notes with ease.</p>
       </div>
 
-      <section id="paperapp">
 
-        <div class="form-group" id="files">
-          <button id="clear" class="btn btn-primary">Clear</button>
-          <button id="open" class="btn btn-primary">Open</button>
-          <button id="save" class="btn btn-primary">Save</button>
-        </div>
-
-        <div class="page-header">
-				  <h1>Add New Paper</h1>
-        </div>
-
-        <div class="form-group">
-          <label for="new-paper">Paper Title</label>
-				  <input id="new-paper" class="form-control" placeholder="Paper Title" autofocus>
-        </div>
-
-        <section id="main">
-          <div class="page-header">
-            <h1>Papers</h1>
-          </div>
-  				<div id="paper-list"></div>
-  			</section>
-
-  		</section>
+      <div id="app-view-container">
 
 
-      <script type="text/template" id="item-template">
-        <div class="row">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title"><%- title %></h3>
-            </div>
-            <div class="panel-body">
-              <div class="form-group">
-                <input class="edit form-control" value="<%- title %>">
-              </div>
-              <p>Further information. Editing toggle.</p>
-              <button class="destroy btn btn-danger btn-sm">Delete</button>
-            </div>
-          </div>
-        </div>
-  		</script>
+      </div>
 
       <p>
         <small>
@@ -81,6 +79,115 @@
 
     </div>
   </body>
+
+
+  <!-- Templates : Later to be moved to JST or other. -->
+
+  <!-- PaperView -->
+  <script type="text/template" id="paper-view-template">
+    <div class="row">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title"><%- key %></h3>
+        </div>
+        <div class="panel-body">
+          <p>Title: <%- title %></p>
+          <p>Year: <%- year %></p>
+          <p>Authors: <%- authors %></p>
+          <p>Overview: <%- overview %></p>
+          <p>Tags: <%- tags %></p>
+        </div>
+      </div>
+    </div>
+  </script>
+
+  <!-- PaperView Editing -->
+  <script type="text/template" id="paper-edit-template">
+    <div class="row">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title edit"><%- key %></h3>
+        </div>
+        <div class="panel-body">
+          <form id="paper-edit-form">
+            <div class="form-group">
+              <label for="key">Key</label>
+              <input id="key" type="text"  class="form-control" value="<%- key %>">
+            </div>
+            <div class="form-group">
+              <label for="title">Title</label>
+              <input id="title" type="text"  class="form-control" value="<%- title %>">
+            </div>
+            <div class="form-group">
+              <label for="year">Year</label>
+              <input id="year" type="text"  class="form-control" value="<%- year %>">
+            </div>
+            <div class="form-group">
+              <label for="authors">Authors</label>
+              <input id="authors" type="text"  class="form-control" value="<%- authors %>">
+            </div>
+            <div class="form-group">
+              <label for="tags">Tags</label>
+              <input id="tags" type="text"  class="form-control" value="<%- tags %>">
+            </div>
+            <div class="form-group">
+              <label for="overview">Overview</label>
+              <textarea  id="overview" class="form-control" rows="3"><%- overview %></textarea>
+            </div>
+            <button type="submit" class="btn btn-default">Save</button>
+            <button class="cancel btn btn-default">Cancel</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </script>
+
+
+  <!-- PapersItemView -->
+  <script type="text/template" id="papers-item-view-template">
+    <div class="row">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title title"><%- key %></h3>
+        </div>
+        <div class="panel-body">
+          <p>Title: <%- title %></p>
+          <p>Year: <%- year %></p>
+          <p>Authors: <%- authors %></p>
+          <button class="destroy btn btn-danger btn-sm">Delete</button>
+        </div>
+      </div>
+    </div>
+  </script>
+
+  <!-- PapersView -->
+  <script type="text/template" id="papers-view-template">
+    <div class="form-group" id="files">
+      <button id="clear" class="btn btn-primary">Clear</button>
+      <button id="open" class="btn btn-primary">Open</button>
+      <button id="save" class="btn btn-primary">Save</button>
+    </div>
+
+    <div class="page-header">
+      <h1>Add New Paper</h1>
+    </div>
+
+    <form id="paper-create-form" class="form-inline">
+      <div class="form-group">
+        <label for="key">Key</label>
+        <input id="key" type="text" class="form-control" placeholder="Paper Key" autofocus>
+      </div>
+      <button type="submit" class="btn btn-default">Create</button>
+    </form>
+
+    <section id="main">
+      <div class="page-header">
+        <h1>Papers</h1>
+      </div>
+      <div id="paper-list"></div>
+    </section>
+  </script>
+
 
   <!-- http://stackoverflow.com/a/37480521/209647 -->
   <!-- Insert this line above script imports  -->
@@ -116,7 +223,15 @@
   <script src="./assets/js/collections/notes.js"></script>
   <script src="./assets/js/collections/annotations.js"></script>
   <script src="./assets/js/collections/papers.js"></script>
+
+  <script src="./assets/js/controllers/view-paper-controller.js"></script>
+  <script src="./assets/js/controllers/view-papers-controller.js"></script>
+
+  <script src="./assets/js/routers/app-router.js"></script>
+
   <script src="./assets/js/views/paper-view.js"></script>
+  <script src="./assets/js/views/papers-item-view.js"></script>
+  <script src="./assets/js/views/papers-view.js"></script>
   <script src="./assets/js/views/app-view.js"></script>
 
 
