A working version of being able to list, create, view and edit a "Paper" model. There are some issues with the model.save not then syncing the collection to the localstorage, and subsequent fetches losing this model. Next step is to look at using a file based DB such as DiskDB or LokiJS and how we build an interface for backbone to talk to this.

--- a/app/index.html
+++ b/app/index.html
@@ -230,6 +230,7 @@
   <script src="./assets/js/routers/app-router.js"></script>
 
   <script src="./assets/js/views/paper-view.js"></script>
+  <script src="./assets/js/views/paper-edit-view.js"></script>
   <script src="./assets/js/views/papers-item-view.js"></script>
   <script src="./assets/js/views/papers-view.js"></script>
   <script src="./assets/js/views/app-view.js"></script>
