Working on using LokiJS/DiskDB with Backbone. Have something sort of working as a demonstrator, but lots of commented out debug-mess now needs cleaning up. :)

--- a/app/index.html
+++ b/app/index.html
@@ -217,18 +217,26 @@
 
 
   </script>
+  
+
+  <!-- Backbone Models -->
   <script src="./assets/js/models/note.js"></script>
   <script src="./assets/js/models/annotation.js"></script>
   <script src="./assets/js/models/paper.js"></script>
+
+  <!-- Backbone Collections -->
   <script src="./assets/js/collections/notes.js"></script>
   <script src="./assets/js/collections/annotations.js"></script>
   <script src="./assets/js/collections/papers.js"></script>
 
+  <!-- Backbone Controllers -->
   <script src="./assets/js/controllers/view-paper-controller.js"></script>
   <script src="./assets/js/controllers/view-papers-controller.js"></script>
 
+  <!-- Backbone Routers -->
   <script src="./assets/js/routers/app-router.js"></script>
 
+  <!-- Backbone Views -->
   <script src="./assets/js/views/paper-view.js"></script>
   <script src="./assets/js/views/paper-edit-view.js"></script>
   <script src="./assets/js/views/papers-item-view.js"></script>
