--- a/app/index.html
+++ b/app/index.html
@@ -135,7 +135,7 @@
               <textarea  id="overview" class="form-control" rows="3"><%- overview %></textarea>
             </div>
             <button type="submit" class="btn btn-default">Save</button>
-            <button class="cancel btn btn-default">Cancel</button>
+            <button type="button" class="cancel btn btn-default">Cancel</button>
           </form>
         </div>
       </div>
@@ -217,7 +217,9 @@
 
 
   </script>
-  
+
+  <!-- Backbone DB -->
+  <script src="./assets/js/backbone-db.js"></script>
 
   <!-- Backbone Models -->
   <script src="./assets/js/models/note.js"></script>
