--- a/app/index.html
+++ b/app/index.html
@@ -99,7 +99,31 @@
         </div>
       </div>
     </div>
+    <section id="main">
+      <div class="page-header">
+        <h1>Notes</h1>
+      </div>
+      <div id="note-list"></div>
+    </section>
   </script>
+
+
+  <!-- NotesItemView -->
+  <script type="text/template" id="notes-item-view-template">
+    <div class="row">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title title"><%- title %></h3>
+        </div>
+        <div class="panel-body">
+          <p>Date: <%- datetime %></p>
+          <p>Text: <%- text %></p>
+          <button class="destroy btn btn-danger btn-sm">Delete</button>
+        </div>
+      </div>
+    </div>
+  </script>
+
 
   <!-- PaperView Editing -->
   <script type="text/template" id="paper-edit-template">
