--- a/app/index.html
+++ b/app/index.html
@@ -124,8 +124,49 @@
     </div>
   </script>
 
+  <!-- NoteView -->
+  <script type="text/template" id="note-view-template">
+    <div class="row">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title"><%- title %></h3>
+        </div>
+        <div class="panel-body">
+          <p>Date: <%- datetime %></p>
+          <p>Text: <%- text %></p>
+        </div>
+      </div>
+    </div>
+  </script>
 
-  <!-- PaperView Editing -->
+  <!-- NoteEditView -->
+  <script type="text/template" id="note-edit-template">
+    <div class="row">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title edit"><%- title %></h3>
+        </div>
+        <div class="panel-body">
+          <form id="paper-edit-form">
+            <div class="form-group">
+              <label for="title">Title</label>
+              <input id="title" type="text"  class="form-control" value="<%- title %>">
+            </div>
+            <div class="form-group">
+              <label for="text">Text</label>
+              <textarea  id="text" class="form-control" rows="3"><%- text %></textarea>
+            </div>
+            <button type="submit" class="btn btn-default">Save</button>
+            <button type="button" class="cancel btn btn-default">Cancel</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </script>
+
+
+
+  <!-- PaperEditView -->
   <script type="text/template" id="paper-edit-template">
     <div class="row">
       <div class="panel panel-default">
@@ -258,6 +299,7 @@
   <!-- Backbone Controllers -->
   <script src="./assets/js/controllers/view-paper-controller.js"></script>
   <script src="./assets/js/controllers/view-papers-controller.js"></script>
+  <script src="./assets/js/controllers/view-note-controller.js"></script>
 
   <!-- Backbone Routers -->
   <script src="./assets/js/routers/app-router.js"></script>
@@ -267,6 +309,11 @@
   <script src="./assets/js/views/paper-edit-view.js"></script>
   <script src="./assets/js/views/papers-item-view.js"></script>
   <script src="./assets/js/views/papers-view.js"></script>
+
+  <script src="./assets/js/views/note-view.js"></script>
+  <script src="./assets/js/views/note-edit-view.js"></script>
+  <script src="./assets/js/views/notes-item-view.js"></script>
+
   <script src="./assets/js/views/app-view.js"></script>
 
 
