--- a/app/index.html
+++ b/app/index.html
@@ -57,16 +57,7 @@
         </div>
       </nav>
 
-
-      <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h1>Paper. Notes.</h1>
-        <p>Read and make notes with ease.</p>
-      </div>
-
-
       <div id="app-view-container">
-
 
       </div>
 
@@ -87,6 +78,11 @@
 
   <!-- PaperView -->
   <script type="text/template" id="paper-view-template">
+    <div class="page-header">
+      <h1>Paper</h1>
+      <p class="lead">View paper details and notes.</p>
+    </div>
+
     <div class="row">
       <div class="panel panel-default">
         <div class="panel-heading">
@@ -140,6 +136,11 @@
 
   <!-- NoteView -->
   <script type="text/template" id="note-view-template">
+    <div class="page-header">
+      <h1>Note</h1>
+      <p class="lead">View note details.</p>
+    </div>
+
     <div class="form-group">
       <button type="button" id="paper" class="btn btn-primary">Back to Paper</button>
     </div>
@@ -158,6 +159,11 @@
 
   <!-- NoteEditView -->
   <script type="text/template" id="note-edit-template">
+    <div class="page-header">
+      <h1>Note</h1>
+      <p class="lead">Edit note details.</p>
+    </div>
+
     <div class="row">
       <div class="panel panel-default">
         <div class="panel-heading">
@@ -185,6 +191,11 @@
 
   <!-- PaperEditView -->
   <script type="text/template" id="paper-edit-template">
+    <div class="page-header">
+      <h1>Paper</h1>
+      <p class="lead">Edit paper details.</p>
+    </div>
+
     <div class="row">
       <div class="panel panel-default">
         <div class="panel-heading">
@@ -244,28 +255,40 @@
 
   <!-- PapersView -->
   <script type="text/template" id="papers-view-template">
-    <div class="form-group" id="files">
-      <button id="clear" class="btn btn-primary">Clear</button>
-      <button id="open" class="btn btn-primary">Open</button>
-      <button id="save" class="btn btn-primary">Save</button>
-    </div>
 
     <div class="page-header">
-      <h1>Add New Paper</h1>
+      <h1>Papers</h1>
+      <p class="lead">All the papers in the database.</p>
     </div>
 
-    <form id="paper-create-form" class="form-inline">
-      <div class="form-group">
-        <label for="key">Key</label>
-        <input id="key" type="text" class="form-control" placeholder="Paper Key" autofocus>
+    <div class="row">
+      <div class="col-sm-6">
+        <h2>Search Papers</h2>
+
+        <form id="search-form" >
+          <div class="form-group">
+            <label for="search">Search</label>
+            <input id="search" type="text" class="form-control" placeholder="">
+          </div>
+          <button type="submit" class="btn btn-default">Search</button>
+        </form>
       </div>
-      <button type="submit" class="btn btn-default">Create</button>
-    </form>
+      <div class="col-sm-6">
+        <h2>Add New Paper</h2>
+
+
+        <form id="paper-create-form" >
+          <div class="form-group">
+            <label for="key">Key</label>
+            <input id="key" type="text" class="form-control" placeholder="Paper Key" autofocus>
+          </div>
+          <button type="submit" class="btn btn-default">Create</button>
+        </form>
+      </div>
+    </div>
 
     <section id="main">
-      <div class="page-header">
-        <h1>Papers</h1>
-      </div>
+      <h2>Paper List</h2>
       <div id="paper-list"></div>
     </section>
   </script>
@@ -274,6 +297,12 @@
 
   <!-- AppView -->
   <script type="text/template" id="app-view-template">
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <h1>Paper. Notes.</h1>
+      <p>Read and make notes with ease.</p>
+    </div>
+
     <div class="form-group" id="files">
       <button id="clear" class="btn btn-primary">Clear</button>
       <button id="open" class="btn btn-primary">Open</button>
